deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: default
  labels:
    app: test
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        tier: test
    spec:
      containers:
      - name: test
        image: minju0907/test:latest
        ports:
          - containerPort: 8080 # 컨테이너 내부 포트
        resources:
          requests:
            cpu: "500m"  # CPU 요청 : 컨테이너 리소스에 대한 request (이정도 쓰겠다)
          limits:
            cpu: "1000m"  # CPU 제한  
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
  labels:
    app: test
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
spec:
  ports:
  - port: 80 # 서비스가 생성할 포트
    targetPort: 8080 # 컨테이너 내부
    protocol: TCP
  selector:
    app: test
    tier: test
  type: NodePort
